--- a/mydoc/plugins/content_index/index.css
+++ b/mydoc/plugins/content_index/index.css
@@ -4,16 +4,24 @@
     margin: 15px 0 0 0;
 }
 
+.mydoc-content-index>ul>li {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space:nowrap;
+}
+
 .mydoc-content-index.float {
     position: fixed;
-    right: 0;
-    max-height: 100vh;
-    max-width: 300px;
-    overflow: auto;
-    margin: 0;
-    padding-right:20px;
     z-index: 7000;
-    /*top: 30px;*/
+    top: 40px;
+    bottom:0;
+    left: 0;
+    width:300px;
+    margin: 0;
+    max-height: calc(100vh - 40px);
+    overflow: auto;
+    background-color: white;
+    border-right: 1px solid #eee;
 }
 
 .mydoc-content-index .num {
@@ -28,12 +36,18 @@
     margin:0;
 }
 
-@media screen and (max-width:900px) {
+.mydoc-content-index.float .current>a {
+    color: red;
+}
+
+@media screen and (max-width:1220px) {
     .mydoc-content-index.float {
         position: unset;
-        max-height: unset;
         max-width: unset;
+        width: unset;
+        margin: 15px 0 0 0;
+        max-height: unset;
+        background-color: #eee;
+        border-right: unset;
     }
-
-    .mydoc-content-index {margin-left:10px;margin-right:10px;}
 }
